voting/ingress.k8s.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    
    - host: tk8s.ru

      http:

        paths:

          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: voting-app-service
                port:
                  number: 80
          - path: "/result"
            pathType: Prefix
            backend:
              service:
                name: result-app-service
                port:
                  number: 80
